tests/core/snapshots/auth-order.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "htpasswd", src: ".htpasswd", type: Htpasswd)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  data: String @http(url: "http://upstream/data") @protected
}
