tests/core/snapshots/dedupe-batch-query-execution.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int!
}

type Query {
  posts: [Post]
  @http(url: "http://jsonplaceholder.typicode.com/posts?id=1", dedupe: true)
}

type User {
  id: Int
  name: String
}
