tests/core/snapshots/postgres-view-insert-error.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot perform Insert on view 'active_users'. Standard views do not support write operations; use a base table.",
    "trace": [
      "Mutation",
      "createUser",
      "@postgres"
    ],
    "description": null
  }
]
