tests/core/snapshots/redis-missing-key.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "@redis(operation: GET) requires 'key'",
    "trace": [
      "Query",
      "cachedValue",
      "@redis"
    ],
    "description": null
  }
]
