tests/core/snapshots/redis-subscribe-on-query.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "@redis(operation: SUBSCRIBE) is only allowed on Subscription fields",
    "trace": [
      "Query",
      "alerts",
      "@redis"
    ],
    "description": null
  }
]
