tests/core/snapshots/redis-subscribe.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000)
@upstream
@link(id: "default", src: "redis://localhost:6379", type: Redis)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
  subscription: Subscription
}

type Query {
  dummy: String @expr(body: "ok")
}

type Subscription {
  alerts(channel: String!): JSON
  @redis(operation: "SUBSCRIBE", channel: "{{.args.channel}}")
  streamEvents(key: String!): JSON
  @redis(operation: "XREAD", key: "{{.args.key}}")
}
