tests/core/snapshots/rest-api-error.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 500,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "internal: non-null types require a return value",
        "locations": [
          {
            "line": 3,
            "column": 5
          }
        ],
        "path": [
          "user",
          "id"
        ]
      }
    ],
    "data": null
  }
}
