tests/core/snapshots/showcase.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "No Config URL specified"
      }
    ],
    "data": null
  }
}
